--- a/package.json
+++ b/package.json
@@ -6,19 +6,25 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "seed": "node db/seed.js"
+    "seed": "node db/seed.js",
+    "test-rate-limit": "chmod +x test-rate-limit.sh && ./test-rate-limit.sh"
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dompurify": "^3.2.6",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.5.1",
+    "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
+    "jsdom": "^26.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "pg": "^8.11.3",
-    "express-validator": "^7.0.1"
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
